syntax = "proto3";

package com.academy.fintech.application;

option java_multiple_files = true;

service ApplicationService{
  rpc Create(CreateRequest) returns (CreateResponse) {}
  rpc Remove(RemoveRequest) returns (RemoveResponse) {}
}

message CreateRequest{
  string firstName = 1;
  string lastName = 2;
  string email = 3;
  string salary = 4;
  string disbursementAmount = 5;
}

message CreateResponse{
  string applicationId = 1;
}

message RemoveRequest {
  string applicationId = 1;
}

message RemoveResponse {
  bool success = 1;
}

// Request Path
//com.academy.fintech.application.ApplicationService/Create